# creagy-project-tracker

./: .env.example  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.dashboard  README.md  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
alembic/: env.py  script.py.mako
alembic/versions/: 20240514_add_project_budget_columns.py
backend/: __init__.py  app.py  config.py  crud.py  database.py  main.py  models.py  schemas.py  seed.py
backend/data/: sample_data.json
backend/routers/: __init__.py  metrics.py  projects.py  reports.py  tasks.py
cron/: README.md
dashboard/: __init__.py  api_client.py  app.py
dashboard/views/: __init__.py  company_manager.py  project_manager.py  team_member.py
data/: sample_projects.json
fastapi/: __init__.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  main.jsx  styles.css
frontend/src/components/: GanttChart.jsx  Layout.jsx  MandayChart.jsx  ProjectForm.jsx  SummaryBox.jsx  TaskForm.jsx
frontend/src/pages/: DashboardPage.jsx  LoginPage.jsx  ProjectCreatePage.jsx  ProjectDetailPage.jsx
instance/: creagy.db
pydantic/: __init__.py
scripts/: generate_weekly_reports.py  utils.py
sqlalchemy/: __init__.py
sqlalchemy/orm/: __init__.py
static/css/: style.css
static/js/: project_detail.js
templates/: base.html  dashboard.html  index.html  new_project.html  project_detail.html
tests/: test_api_endpoints.py  test_health.py  test_portfolio_report.py  test_schemas.py
