[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "creagy-project-tracker"
version = "0.1.0"
description = "FastAPI backend skeleton for the Creagy project tracker."
authors = [{ name = "Creagy Team" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.1",
    "SQLAlchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "pydantic>=2.6.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "streamlit>=1.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.4.0",
]
