[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "creagy-project-tracker"
version = "0.1.0"
description = "Modular FastAPI and Streamlit application for project and task tracking."
authors = [{ name = "Creagy Team" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.31,<0.32",
    "sqlalchemy>=2.0,<2.1",
    "pydantic>=2.8,<3",
    "pydantic-settings>=2.3,<3",
    "psycopg[binary]>=3.2,<3.3",
    "httpx>=0.27,<0.28",
    "python-dotenv>=1.0,<2",
    "pandas>=2.2,<2.3",
    "streamlit>=1.39,<1.40",
    "plotly>=5.24,<5.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<8.4",
    "pytest-asyncio>=0.24,<0.25",
]

[project.urls]
Homepage = "https://example.com/creagy-project-tracker"

[tool.uvicorn]
factory = false

[tool.pytest.ini_options]
minversion = "8.0"
pythonpath = ["."]
testpaths = ["tests"]
