[project]
name = "creagy-project-tracker"
version = "0.1.0"
description = "Web-based Creagy Project Tracker application"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-flask>=1.3.0",
]

[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"
